--- a/views/transporte_economico.html
+++ b/views/transporte_economico.html
@@ -18,11 +18,25 @@
         <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
-    <nav id="navbar"></nav>
+    <nav id="navbar"></nav><br>
 
-    <main></main>
+    <main>
 
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+        <section class="contenedor2 sombra">
+            <h2 class="texto">En esta primera seccion puedes conocer algunos de las compañias de camiones en Mexico donde puedes ver que compañia de camiones te funciona mejor:</h2>
+            <h3 class="texto">ADO</h3>
+            <p>Conocido por: ADO es una de las compañías de autobuses más grandes del mundo y el líder de México en la industria de autobuses.
+                Cobertura: península de Yucatán, Quintana Roo, Yucatán, Campeche y Chiapas
+                Prestaciones Wi-Fi *, baños a bordo *, A / C *, tomacorrientes *, TV *, pantallas de TV individuales *, espacio extra para las piernas *, asientos reclinables *
+                ¿Se pueden cambiar los billetes?: Si, solo se pueden cambiar en la estación.
+                Requerimientos para subir a bordo: Bebe presentar sus boletos impresos o en un dispositivo móvil y una pieza válida de I.D. con una foto y tu nombre y apellidos.</p>
+        </section><br>
+        <section>
+
+        </section><br>
+    </main>
+
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
