--- a/views/transporte_economico.html
+++ b/views/transporte_economico.html
@@ -9,9 +9,13 @@
     <link rel="preload" href="../css/normalize.css" as="style">
     <link rel="preload" href="../css/style.css" as="style">
     <link rel="preload" href="../css/navbar.css" as="style">
+    <link rel="preload" href="../css/transporte.css" as="style">
+    <link rel="preload" href="./css/bot.css" as="style">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/transporte.css">
+    <link rel="stylesheet" href="./css/bot.css">
 </head>
 <body>
     <header>
@@ -20,23 +24,21 @@
 
     <nav id="navbar"></nav><br>
 
-    <main>
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
+    <br><main class="derecha">
         <section class="contenedor2 sombra">
             <h2 class="texto">En esta primera seccion puedes conocer algunos de las compañias de camiones en Mexico donde puedes ver que compañia de camiones te funciona mejor:</h2>
-            <h3 class="texto">ADO</h3>
-            <p>Conocido por: ADO es una de las compañías de autobuses más grandes del mundo y el líder de México en la industria de autobuses.
-                Cobertura: península de Yucatán, Quintana Roo, Yucatán, Campeche y Chiapas
-                Prestaciones Wi-Fi *, baños a bordo *, A / C *, tomacorrientes *, TV *, pantallas de TV individuales *, espacio extra para las piernas *, asientos reclinables *
-                ¿Se pueden cambiar los billetes?: Si, solo se pueden cambiar en la estación.
-                Requerimientos para subir a bordo: Bebe presentar sus boletos impresos o en un dispositivo móvil y una pieza válida de I.D. con una foto y tu nombre y apellidos.</p>
+            <img src="../img/ado.jpg" alt="camion_ado" width="300" height="150" align="left" class="imagen"><h3 class="texto">Autobuses de Oriente</h3> <span class="remarcar">Conocido por:</span> ADO es una de las compañías de autobuses más grandes del mundo y el líder de México en la industria de autobuses. <br><span class="remarcar">Cobertura:</span> península de Yucatán, Quintana Roo, Yucatán, Campeche y Chiapas. <br><span class="remarcar">Prestaciones:</span> Wi-Fi, baños a bordo, tomacorrientes, TV, pantallas de TV individuales, espacio extra para las piernas, asientos reclinables. <br><span class="remarcar">¿Se pueden cambiar los billetes?:</span> Si, solo se pueden cambiar en la estación. <br><span class="remarcar">Requerimientos para subir a bordo:</span>Bebe presentar sus boletos impresos o en un dispositivo móvil y una pieza válida de I.D. con una foto y tu nombre y apellidos.<br><br>
+            <img src="../img/senda.jpg" alt="camion_ado" width="300" height="200" align="left" class="imagen"><h3 class="texto">Grupo Senda</h3> <span class="remarcar">Conocido por:</span> El Grupo Senda cuenta con rutas que cruzan ambos lados de la frontera de México y EE.UU. <br><span class="remarcar">Cobertura:</span> Aguascalientes, Chihuahua, Coahuila, Durango, Estado de México, Jalisco, Nuevo León, Querétaro, San Luis Potosí, Sinaloa, Tamaulipas, Georgia (EE.UU), Carolina del Norte (EE.UU.) and Texas (EE.UU.) <br><span class="remarcar">Prestaciones:</span> Conexión inalámbrica a internet, comida y bebida de cortesía, aseos a bordo, aire acondicionado, enchufes, televisión, pantallas individuales de televisión, espacio extra para las piernas, asientos reclinables.<br><span class="remarcar">¿Se pueden cambiar los billetes?:</span> Si, sólo se pueden cambiar en la estación.<br><span class="remarcar">Requerimientos para subir a bordo:</span> Tienes que presentar tus billetes impresos y una identificación válida con fotografía y tu nombre y apellidos.<br><br>
+            <img src="../img/omnibus.jpg" alt="camion_ado" width="300" height="200" align="left" class="imagen"><h3 class="texto">Omnibus de México</h3><span class="remarcar">Conocido por:</span> Omnibus de México cuenta con una de las redes más extensas del país y cuenta con rutas en alrededor de dos terceras partes de los estados mexicanos, principalmente aquellos al Norte, oeste y este de la capital. <br><span class="remarcar">Cobertura:</span> Aguascalientes, Estado de Colima, Estado de México, Jalisco, Nuevo León, Querétaro.<br><span class="remarcar">Prestaciones:</span> Conexión inalámbrica a internet, comida y bebida de cortesía, aseos a bordo, aire acondicionado, enchufes, televisión, pantallas individuales de televisión, espacio extra para las piernas, reposa piernas, asientos reclinables. <br><span class="remarcar">¿Se pueden cambiar los billetes?:</span> Si, sólo se pueden cambiar en la estación. <br><span class="remarcar">Requerimientos para subir a bordo:</span> Tienes que presentar tus billetes impresos y una identificación válida con fotografía y tu nombre y apellidos.<br><br>
+            <img src="../img/ETN.jpg" alt="camion_ado" width="300" height="240" align="left" class="imagen"><h3 class="texto">ETN y Turistar Lujo</h3><span class="remarcar">Conocido por:</span> ETN es una de las mejores compañías de lujo en México. Con sólo 24 asientos y una configuración de 3 asientos atravesados (en lugar de la más común de 4 que encontramos en la mayoría de las compañías), puedes incluso conseguir un asiento individual. <br><span class="remarcar">Cobertura:</span> Aguascalientes, Coahuila, Estado de Colima, Durango, Guerrero, Jalisco, Estado de México, Michoacán, Nayarit, Nuevo León, Querétaro y San Luis Potosí.<br><span class="remarcar">Prestaciones:</span> Conexión inalámbrica a internet, comida y bebida de cortesía, aseos a bordo, aire acondicionado, enchufes, televisión, pantallas individuales de televisión, espacio extra para las piernas, reposa piernas, asientos reclinables, asientos cama.<br><span class="remarcar">¿Se pueden cambiar los billetes?:</span> Si, sólo se pueden cambiar en la estación. Para cualquier cambio necesitarás traer una versión impresa de tu billete. <br><span class="remarcar">Requerimientos para subir a bordo:</span> Puedes mostrar una versión en formato PDF de tu billete en tu teléfono, pero deberás presentar una identificación válida con foto, nombre y apellidos.<br><br>
+            <img src="../img/AERS.jpg" alt="camion_ado" width="300" height="240" align="left" class="imagen"><h3 class="texto">Grupo AERS (Costaline, Futura, Turistar Ejecutivo)</h3><span class="remarcar">Conocido por:</span> El grupo AERS ofrece diferentes líneas de autobuses para atender a una amplia gama de clientes en función de sus necesidades y presupuestos.<br><span class="remarcar">Cobertura:</span>Michoacán, Guerrero, Morelos. <br><span class="remarcar">Prestaciones:</span> comida y bebida de cortesía, aseos a bordo, aire acondicionado, televisión, pantallas individuales de televisión, espacio extra para las piernas, reposa piernas, asientos reclinables. <br><span class="remarcar">¿Se pueden cambiar los billetes?:</span> Si, sólo se pueden cambiar en la estación. Para cualquier cambio necesitarás traer una versión impresa de tu billete. <br><span class="remarcar">Requerimientos para subir a bordo:</span> Puedes mostrar una versión en formato PDF de tu billete en tu teléfono, pero deberás presentar una identificación válida con foto, nombre y apellidos.<br><br>
         </section><br>
-        <section>
+        <section class="contenedor2 sombra">
 
         </section><br>
     </main>
-
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
