--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,22 +9,81 @@
     <link rel="preload" href="../css/normalize.css" as="style">
     <link rel="preload" href="../css/style.css" as="style">
     <link rel="preload" href="../css/navbar.css" as="style">
+    <link rel="preload" href="../css/contacto.css" as="style">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/contacto.css">
 </head>
 <body>
     <header>
         <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
-    <nav id="navbar"></nav>
+    <nav id="navbar"></nav><br>
 
-    <main>
-        
-    </main>
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    
+    <div class="contact_form">
+
+        <div class="formulario">      
+        <h1 class="h1">Formulario de contacto</h1>
+            <h3>Escríbenos y en breve nos pondremos en contacto contigo</h3>
+
+
+            <form action="submeter-formulario.php" method="post">       
+
+                
+                    <p>
+                    <label for="nombre" class="colocar_nombre">Nombre
+                        <span class="obligatorio">*</span>
+                    </label>
+                        <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
+                    </p>
+                
+                    <p>
+                    <label for="email" class="colocar_email">Email
+                        <span class="obligatorio">*</span>
+                    </label>
+                        <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+                    </p>
+                
+                    <p>
+                    <label for="telefone" class="colocar_telefono">Teléfono
+                    </label>
+                        <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+                    </p>    
+                
+                    <p>
+                    <label for="website" class="colocar_website">Sitio web
+                    </label>
+                        <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
+                    </p>    
+                
+                    <p>
+                    <label for="asunto" class="colocar_asunto">Asunto
+                        <span class="obligatorio">*</span>
+                    </label>
+                        <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
+                    </p>    
+                
+                    <p>
+                    <label for="mensaje" class="colocar_mensaje">Mensaje
+                        <span class="obligatorio">*</span>
+                    </label>                     
+                                        <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
+                                    </p>                    
+                
+                    <button type="submit" name="enviar_formulario" id="enviar"><p>Enviar</p></button>
+
+                    <p class="aviso">
+                    <span class="obligatorio"> * </span>los campos son obligatorios.
+                    </p>          
+                
+            </form>
+        </div>  
+    </div>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
