--- a/views/mejores_hospedajes.html
+++ b/views/mejores_hospedajes.html
@@ -20,9 +20,11 @@
 
     <nav id="navbar"></nav>
 
-    <main></main>
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <main>
+        
+    </main>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
