--- a/views/paginas_voluntariado.html
+++ b/views/paginas_voluntariado.html
@@ -18,12 +18,36 @@
         <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
-    <nav id="navbar"></nav>
+    <nav id="navbar"></nav><br>
 
     <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
     <main>
-        
+        <h2 class="texto">Aqui puedes encontrar algo de informacion sobre algunas paginas de voluntariado</h2>
+        <section class="sombra contenedor">
+            <h2 class="texto">WORLDPACKERS</h2>
+            <img src="../img/world.jpg" alt="camion_ado" width="300" height="150" align="right" class="imagen">Es uno de los portales que se suman a la lista de opciones que existen para ahorrar dinero mientras viajas e incluso pueden servir para buscar trabajo en el extranjero o aprender idiomas. <br> Un portal web brasileño fundado por Ricardo ‘Rig’ Lima y Eric Faria que sirve como nexo entre los viajeros y los hoteles, hostels, albergues y demás para intercambiar las habilidades de los viajeros por alojamiento. Como dicen en su web, la vida se trata de aprender, compartir y viajar.<br><br>
+            <h3 class="texto">¿Cómo funciona Worldpackers?</h3>
+            <p>El trueque que puedes realizar en Worldpackers consiste en realizar las tareas típicas de un albergue o un hostel; atender en recepción, limpiar, u otras labores más especializadas como impartir clases de idiomas, yoga, ayuda con la web, a cambio de hospedaje. Esta herramienta se puede utilizar de diferentes formas: <br>
+                Por ejemplo, buscar un alojamiento donde ofrecer nuestras habilidades con la finalidad de pasar un tiempo de vacaciones o también puede usarse para investigar la zona en búsqueda de un futuro empleo o simplemente, y no menos importante, para aprender idiomas.
+                Muchas mochileros que van viajando por el mundo, lo usan para tomar fuerzas mientras estás viajando y detenerse en un sitio durante un periodo de tiempo.
+            </p>
+            <h3 class="texto">¿Qué ofrece el alojamiento al viajero?</h3>
+            <p>En la mayoría de los casos, los lugares de hospedaje ofrecen alojamiento, comida y acceso a otros servicios como lavandería, internet. A cambio de unas pocas horas de trabajo (las horas que se trabaja dependen del lugar seleccionado).</p>
+            <h3 class="texto">¿Qué documentos legales (como una visa) necesito para ser voluntario para un albergue?</h3>
+            <p>Cada país tiene sus propias normas y reglamentos para los turista o viajeros. Como voluntario, tu trabajo es el de ofrecer ayuda a uno de los albergues a cambio de alojamiento, comida, etc. <br>
+                Ojo, esto no es un empleo en sí, sino una forma de cambiar habilidades por noches de hospedaje y comida. No recibes incentivos financieros y, como tal, no estás trabajando.
+                Sin embargo, es tu responsabilidad asegurarte de que tiene los documentos necesarios al entrar a los diferentes países que visites en tu viaje.
+            </p>
+            <a class="texto3" href="https://www.worldpackers.com/es">Puedes dar click en este texto para poder entrar a la pagina de Worldpackers</a>
+        </section><br>
+        <section class="sombra contenedor">
+            <h2 class="texto">IDEALIST</h2>
+            <img src="../img/idealist.jpg" alt="camion_ado" width="130" height="150" align="right" class="imagen">Idealist es una organización sin fines de lucro con sede en Nueva York y representantes para español y portugués en Ecuador, España y Brazil. Juntos, queremos construir un mundo donde todos podamos vivir libre y dignamente. Comenzamos con esta misión en 1995, amamos lo que hacemos y estamos aquí para lo que necesites.
+            <h3 class="texto">¿Cómo funciona Idealist?</h3>
+            <p>Es una plataforma para conseguir trabajos internacionales, donde se consigue empleo, pasantia o puedes trabajar en voluntariado, se debe checar el numero de empleos que se tienen y aplicar para alguno de ellos.</p>
+            <a class="texto3" href="idealist.org/en">Puedes dar click en este texto para poder entrar a la pagina de Idealist</a>
+        </section>
     </main>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
