--- a/views/mejores_hospedajes.html
+++ b/views/mejores_hospedajes.html
@@ -18,12 +18,12 @@
         <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
-    <nav id="navbar"></nav>
+    <nav id="navbar"></nav><br>
 
     <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
     <main>
-        
+
     </main>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
