--- a/views/preguntas_frecuentes.html
+++ b/views/preguntas_frecuentes.html
@@ -9,9 +9,12 @@
     <link rel="preload" href="../css/normalize.css" as="style">
     <link rel="preload" href="../css/style.css" as="style">
     <link rel="preload" href="../css/navbar.css" as="style">
+    <link rel="preload" href="../css/preguntas.css" as="style">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/preguntas.css">
+    
 </head>
 <body>
     <header>
@@ -22,9 +25,7 @@
 
     <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
-    <main>
-
-    </main>
+    
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
